--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
-    <head>
+    <head>              
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Senne Deprez - HTML5 boilerplate</title>
         <meta name="description" content="This is my HTML5 boilerplate">
-        <meta name="vieuwport" content="widht=device-width, initial-scale=1.0"
+        <meta name="vieuwport" content="widht=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
