--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Senne Deprez - HTML5 boilerplate</title>
         <meta name="description" content="This is my HTML5 boilerplate">
         <meta name="vieuwport" content="widht=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.svg">
     </head>
     <body>
         <header>
