--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Senne Deprez - HTML5 boilerplate</title>
         <meta name="description" content="This is my HTML5 boilerplate">
         <meta name="vieuwport" content="widht=device-width, initial-scale=1.0">
-        <link rel="icon" href="favicon.svg">
+        <link rel="icon" href="favicon.svg" >
+        <link rel="apple-touch-icon" href="apple-touch-icon.svg">
     </head>
     <body>
         <header>
