--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="This is my HTML5 boilerplate">
         <meta name="vieuwport" content="widht=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#44c8f5">
-        
+
         <link rel="icon" href="favicon.svg" >
         <link rel="apple-touch-icon" href="apple-touch-icon.svg">
         <link rel="manifest" href="manifest.json">
@@ -29,6 +29,10 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="https://www.google.com">visited link</a> hic nemo dicta dignissimos dolorum obcaecati nobis tenetur laudantium iusto quibusdam vero velit magnam quam quas! Iure nobis minima accusamus fuga.
         </p>
+        <figure>
+            <img src="img/yawning-cat.jpeg" alt="This is a picture of a cat">
+            <figcapture>yawning-cat Photo by Martina Misser</figcapture>
+        </figure>
         <blockquote cite="http://www.htmldog.com/reference/htmltags/blockquote/">
             <p>
                 A blockquote is a large quotation. The content of a blockquote element must include block-level elements such as headings, lists, paragraphs or div’s. This element can also have an optional attribute cite that specifies the location (in the form of a URI) where the quote has come from.
@@ -40,6 +44,42 @@
         <p>
             Add an unorderd list with 3 list items here
         </p>
+        <h2>Table</h2>
+            <table>
+                <tr>
+                    <th>Country</th>
+                    <th>Capital</th>
+                    <th>Population</th>                    
+                    <th>Language</th>
+                </tr>
+                <tr>
+                    <td>USA</td>
+                    <td>Whansington,DC</td>
+                    <td>309 million</td>
+                    <td>English</td>
+                </tr>
+                <tr>
+                    <td>USA</td>
+                    <td>Whansington,DC</td>
+                    <td>309 million</td>
+                    <td>English</td>
+                </tr>
+                <tr>
+                    <td>USA</td>
+                    <td>Whansington,DC</td>
+                    <td>309 million</td>
+                    <td>English</td>
+                </tr>
+                <tr>
+                    <td>USA</td>
+                    <td>Whansington,DC</td>
+                    <td>309 million</td>
+                    <td>English</td>
+                </tr>
+
+
+            </table>
+        
         <hr>
         <footer>
             <p>By <strong>Your name</strong></p>
