Added default image styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <link rel="icon" href="favicon.svg" >
         <link rel="apple-touch-icon" href="apple-touch-icon.svg">
         <link rel="manifest" href="manifest.json">
+        
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
         <header>
@@ -82,7 +85,7 @@
         
         <hr>
         <footer>
-            <p>By <strong>Your name</strong></p>
+            <p>By <strong>Senne Deprez</strong></p>
         </footer>
     </body>
 </html>
